--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
