--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/danielcpan/BankChurningApi#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
