--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "helmet": "^3.22.0",
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
+    "jsdom": "^21.1.1",
     "mocha": "^7.1.1",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "redis": "^3.0.2",
     "supertest": "^4.0.2",
+    "typescript": "^5.0.4",
     "winston": "^3.2.1"
   },
   "devDependencies": {
